--- a/src/components/result-list-item/components/result-list-item.module.scss
+++ b/src/components/result-list-item/components/result-list-item.module.scss
@@ -28,7 +28,7 @@
 
     &_gallery {
       max-width: 420px;
-      min-width: 290px;
+      // min-width: 290px;
 
       @include container-down('root', $tablet-lg-width) {
         max-width: 1000px;
@@ -48,6 +48,7 @@
 
         @include container-down('root', 400px) {
           flex-direction: column;
+          align-items: flex-start;
         }
 
         span {
