--- a/src/shared/ui/checkbox-btn-ui/checkbox-btn-ui.module.scss
+++ b/src/shared/ui/checkbox-btn-ui/checkbox-btn-ui.module.scss
@@ -4,10 +4,22 @@
   gap: var(--gap-base);
 
   label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
     border: 1px solid rgb(209, 213, 219);
-    background: rgb(243, 244, 246);
+    background-color: rgb(243, 244, 246);
     cursor: pointer;
+    padding: 5px 8px;
+    transition:
+      background-color var(--base-transition),
+      border-color var(--base-transition);
+
+    &:hover:not(input:checked ~ label) {
+      border-color: var(--black);
+      background-color: #fff;
+    }
   }
 
   input {
@@ -18,8 +30,8 @@
     width: 0;
 
     &:checked ~ label {
-      background-color: var(--primary);
-      border: 1px solid var(--primary);
+      background-color: var(--black);
+      color: var(--white);
     }
   }
 }
