--- a/src/shared/styles/variables/breakpoints.scss
+++ b/src/shared/styles/variables/breakpoints.scss
@@ -5,3 +5,5 @@ $laptop-width: 1024px;
 $laptop-lg-width: 1360px;
 $desktop-width: 1440px;
 $desktop-lg-width: 1640px;
+
+$nav-collapse-width: 1240px;
