--- a/src/shared/components/headerComponent/components/header.module.scss
+++ b/src/shared/components/headerComponent/components/header.module.scss
@@ -8,52 +8,54 @@
 }
 
 .burger {
+  @extend %flex-center;
+  flex-direction: column;
+  gap: 6px;
+  width: 48px;
+  height: 48px;
   @extend %btn-reset;
-  @extend %flex-column;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  width: 40px;
-  height: 40px;
-  display: none;
+  @extend %main-hover;
+  cursor: pointer;
 
   &_line {
-    position: relative;
     width: 100%;
-    height: 3px;
+    height: 4px;
     background-color: var(--dark);
-    transform-origin: left center;
-    transition: all 0.2s ease-in-out;
-    border-radius: 2px;
-  }
 
-  &_active {
-    .burger_line {
-      &_middle {
-        width: 0;
-        opacity: 0;
-      }
+    &_top {
+      width: 100%;
+    }
 
-      &_top {
-        transform: rotate(-45deg);
-        top: 25px;
-        left: 6px;
-      }
+    &_middle {
+    }
 
-      &_bottom {
-        transform: rotate(45deg);
-        top: -25px;
-        left: 6px;
-      }
+    &_bottom {
     }
   }
 }
 
 .header {
-  &_section {
+  &_main {
     @extend %flex-align;
     gap: clamp(24px, 4vw, 48px);
     padding: 16px 0;
+    background-color: var(--white);
+    z-index: 10;
+
+    &_active {
+      border-bottom: 1px solid var(--primary);
+
+      // .burger_line {
+      //   &_top {
+      //   }
+
+      //   &_middle {
+      //   }
+
+      //   &_bottom {
+      //   }
+      // }
+    }
   }
 
   &_logo {
@@ -82,11 +84,13 @@
       color: var(--primary);
       @extend %main-hover;
     }
+    z-index: 10;
   }
 
   &_action {
     @extend %flex-align;
     flex-wrap: wrap;
     gap: 8px 24px;
+    z-index: 10;
   }
 }
