--- a/src/shared/components/navigation/navigation.module.scss
+++ b/src/shared/components/navigation/navigation.module.scss
@@ -1,70 +1,243 @@
 @import '../../styles/extends.scss';
 @import '../../styles/mixins.scss';
 
-.root {
-  border-top: 1px solid var(--primary);
-  padding: 16px 0;
+// desktop-nav
+@include container-up('header', $nav-collapse-width) {
+  .root {
+    container: nav / inline-size;
 
-  @include container-down('header', $tablet-width) {
-    display: none;
-    border-top: none;
+    @extend %flex-align;
+    border-top: 1px solid var(--primary);
+    padding: 16px 0;
   }
 
-  &_active {
-    @include container-down('header', $tablet-width) {
-      display: block;
-      background-color: red;
+  .nav_closer {
+    height: 48px;
+    width: 48px;
+    @extend %flex-center;
+    @extend %btn-reset;
+    svg {
+      height: 48px;
+      width: 48px;
+      fill: var(--dark);
     }
   }
 
-  ul {
-    @extend %flex-align;
-    @extend %list-reset;
-    gap: clamp(24px, 4vw, 36px);
+  .nav_footer {
+    display: none;
+  }
 
-    li {
-      padding: 16px 0;
-      a {
+  .nav_list {
+    @extend %list-reset;
+    @extend %flex-align;
+    gap: clamp(24px, 4vw, 32px);
+    margin: 0 auto;
+
+    &_item {
+      position: relative;
+      padding: 12px 0;
+
+      & > a {
         @extend %flex-align;
-        gap: 8px;
+        gap: 6px;
         color: var(--dark);
         @extend %main-hover;
+        white-space: nowrap;
       }
-      position: relative;
 
-      &:hover {
-        & > ul {
+      &_arrow {
+        @extend %flex-center;
+        transform-origin: center;
+        transition: transform 0.3s ease-in;
+      }
+
+      &:hover,
+      &:focus {
+        .nav_list_inner {
+          visibility: visible;
+          opacity: 1;
+          transform: translateY(0);
+        }
+
+        .nav_list_item_arrow {
+          transform: rotate(180deg);
+        }
+      }
+    }
+
+    &_inner {
+      position: absolute;
+      @extend %flex-column;
+      align-items: flex-start;
+      gap: 0;
+      background-color: #fff;
+      padding: var(--gap-sm);
+      min-width: 100%;
+      max-width: fit-content;
+      top: 100%;
+      transform: translateY(20px);
+      padding: 20px 24px 12px;
+      box-shadow:
+        rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+        rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+      border-radius: 4px;
+      max-height: 280px;
+      overflow: hidden;
+      overflow-y: auto;
+      visibility: hidden;
+      opacity: 0;
+
+      transition:
+        visibility 0.3s ease-in,
+        opacity 0.3s ease-in,
+        transform 0.3s ease-in;
+
+      li {
+        display: flex;
+        list-style-type: none;
+        padding: 0;
+
+        a {
+          display: inline-block;
+          width: 200px;
+          max-width: fit-content;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          padding: 8px 0;
+          @extend %main-hover;
+          color: var(--dark);
+        }
+      }
+    }
+  }
+}
+
+// mobile-nav
+
+@include container-down('header', $nav-collapse-width) {
+  .root {
+    visibility: hidden;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 48px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    min-height: 100dvh;
+    background-color: var(--white);
+    padding: 0 var(--container-offset);
+    opacity: 0;
+    transition:
+      visibility var(--main-transition),
+      opacity var(--main-transition);
+    z-index: -1;
+
+    &_active {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    padding: 120px var(--container-offset) 60px;
+    z-index: -1;
+    overflow: hidden;
+    overflow-y: auto;
+  }
+  .nav_list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    // gap: clamp(24px, 4vw, 32px);
+    // margin: 0 auto;
+    width: 100%;
+    max-width: 360px;
+
+    a {
+      // font-size: clamp(16px, 4vw, 32px);
+      color: var(--dark);
+    }
+
+    &_item {
+      width: 100%;
+
+      & > a {
+        display: flex;
+        padding: 20px 0;
+        width: 100%;
+        justify-content: space-between;
+        gap: 24px;
+
+        &:has(.nav_list_item_arrow_active) + .nav_list_inner {
           display: flex;
-          animation: fadeIn 0.3s ease-in;
+          visibility: visible;
+          opacity: 1;
+          height: 100%;
         }
       }
 
-      & > ul {
-        position: absolute;
-        @extend %flex-column;
-        gap: var(--gap-xs);
-        background-color: #fff;
-        padding: var(--gap-sm);
-        min-width: 250px;
-        top: 50px;
-        // left: 50%;
-        // transform: translateX(-50%);
-        display: none;
-        box-shadow:
-          0 0 0 1px rgba(0, 0, 0, 0.1),
-          0 4px 11px rgba(0, 0, 0, 0.1);
+      &_arrow {
+        @extend %flex-center;
+        transform-origin: center;
+        transition: transform 0.3s ease-in;
 
-        li {
-          list-style-type: none;
-          padding: 0;
+        // svg {
+        //   width: clamp(24px, 4vw, 40px);
+        //   height: clamp(24px, 4vw, 40px);
+        // }
+
+        &_active {
+          transform: rotate(180deg);
         }
       }
     }
   }
 
-  &_center {
-    ul {
-      justify-content: center;
+  .nav_list_inner {
+    @extend %flex-column;
+    @extend %list-reset;
+    width: 100%;
+    margin-left: 14px;
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    transition:
+      opacity 0.2s ease-in,
+      visibility 0.2s ease-in,
+      height 0.25s linear;
+
+    &_item {
+      position: relative;
+      list-style-type: disc;
+
+      & > a {
+        display: flex;
+        width: 100%;
+        padding: 8px 0;
+      }
+    }
+  }
+
+  .nav_footer_btns {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    width: 100%;
+    padding-top: 20px;
+  }
+
+  .nav_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    margin-top: auto;
+
+    a {
+      font-size: 18px;
+      color: var(--primary);
+      @extend %main-hover;
     }
   }
 }
