--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -20,6 +20,7 @@ body {
   line-height: var(--line-height);
   color: var(--site-color);
   background-color: var(--site-bg-color);
+  scrollbar-gutter: stable;
 }
 
 footer {
