--- a/src/shared/components/navigation/navigation.module.scss
+++ b/src/shared/components/navigation/navigation.module.scss
@@ -149,13 +149,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    // gap: clamp(24px, 4vw, 32px);
-    // margin: 0 auto;
     width: 100%;
     max-width: 360px;
 
     a {
-      // font-size: clamp(16px, 4vw, 32px);
       color: var(--dark);
     }
 
@@ -164,7 +161,7 @@
 
       & > a {
         display: flex;
-        padding: 20px 0;
+        padding: clamp(12px, 2.4vw, 20px) 0;
         width: 100%;
         justify-content: space-between;
         gap: 24px;
@@ -182,11 +179,6 @@
         transform-origin: center;
         transition: transform 0.3s ease-in;
 
-        // svg {
-        //   width: clamp(24px, 4vw, 40px);
-        //   height: clamp(24px, 4vw, 40px);
-        // }
-
         &_active {
           transform: rotate(180deg);
         }
@@ -198,7 +190,7 @@
     @extend %flex-column;
     @extend %list-reset;
     width: 100%;
-    margin-left: 14px;
+    margin-left: 17px;
     visibility: hidden;
     opacity: 0;
     height: 0;
