--- a/src/shared/components/headerComponent/components/header-type-7/header-type-7.module.scss
+++ b/src/shared/components/headerComponent/components/header-type-7/header-type-7.module.scss
@@ -26,21 +26,49 @@
   &_logo {
     margin: 0 auto;
 
-    @include container-down('header', $tablet-width) {
+    @include container-down('header', 1080px) {
       margin: 0;
       margin-right: auto;
     }
   }
 
+  &_address {
+    display: flex;
+    gap: 8px;
+    width: fit-content;
+
+    span {
+      display: inline-block;
+      color: var(--white);
+    }
+
+    @include container-down('header', 1080px) {
+      display: none;
+    }
+  }
+
   &_contacts {
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: nowrap;
 
     & > * {
       width: 100%;
     }
 
     a {
+      @extend %flex-center;
+      justify-content: flex-start;
+      width: fit-content;
+      gap: 8px;
       color: var(--white);
+    }
+  }
+
+  &_action {
+    flex-wrap: nowrap;
+
+    button {
+      text-wrap: nowrap;
     }
   }
 }
