--- a/src/components/hero/components/hero-type-2/hero-type-2.module.scss
+++ b/src/components/hero/components/hero-type-2/hero-type-2.module.scss
@@ -1,15 +1,23 @@
 .root {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   height: 800px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 20px;
   position: relative;
+}
 
-  &::after {
+.background {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  &::before {
     position: absolute;
     top: 0;
     left: 0;
@@ -17,8 +25,11 @@
     bottom: 0;
     content: '';
     background: rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
   }
+}
+
+.container {
+  position: relative;
 }
 
 .content {
@@ -26,10 +37,9 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 24px;
-  max-width: 1250px;
-  margin-inline: auto;
-  padding-inline: var(--gap-base);
 
   h1 {
     font-weight: 700;
@@ -48,12 +58,12 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  align-items: center;
   &_list {
     display: flex;
     align-items: center;
     background-color: #fff;
     width: fit-content;
-    border-radius: 10px;
     border: 1px solid var(--primary);
     margin: -1px;
 
@@ -64,7 +74,6 @@
       margin: 0;
       cursor: pointer;
       padding: 16px 24px;
-      border-radius: 8px;
       color: var(--gray);
       font-size: var(--fs-sm);
       transition:
@@ -89,7 +98,6 @@
 
   &_content {
     > div {
-      // display: flex;
       flex-wrap: wrap;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -101,7 +109,6 @@
 
     &_wrapper {
       display: flex;
-      // flex-wrap: wrap;
       gap: var(--gap-sm);
       align-items: center;
     }
@@ -110,7 +117,6 @@
 
 .button {
   height: 48px;
-  border-radius: 10px;
   width: 150px;
 }
 
