--- a/src/components/hero/components/hero-type-3/hero-type-3.module.scss
+++ b/src/components/hero/components/hero-type-3/hero-type-3.module.scss
@@ -1,23 +1,15 @@
 .root {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   height: 800px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border-radius: 20px;
   position: relative;
-}
 
-.background {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  &::before {
+  &::after {
     position: absolute;
     top: 0;
     left: 0;
@@ -25,11 +17,8 @@
     bottom: 0;
     content: '';
     background: rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
   }
-}
-
-.container {
-  position: relative;
 }
 
 .content {
@@ -37,8 +26,6 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 24px;
 
   h1 {
@@ -58,25 +45,23 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  align-items: center;
   &_list {
     display: flex;
     align-items: center;
-    background-color: #fff;
     width: fit-content;
-    border: 1px solid var(--primary);
-    margin: -1px;
+    gap: var(--gap-sm);
 
     button {
       border: none;
       background: none;
       padding: 0;
       margin: 0;
+      background-color: #fff;
       cursor: pointer;
       padding: 16px 24px;
+      border-radius: 8px;
       color: var(--gray);
       font-size: var(--fs-sm);
-      border-radius: 0;
       transition:
         color 0.2s ease-in-out,
         background-color 0.2s ease-in-out;
@@ -99,6 +84,7 @@
 
   &_content {
     > div {
+      // display: flex;
       flex-wrap: wrap;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
