add: hero-type-4

--- a/src/shared/ui/hero-ui.module.scss
+++ b/src/shared/ui/hero-ui.module.scss
@@ -40,6 +40,15 @@
       border-radius: calc(var(--gap-base) + 2px);
     }
   }
+
+  &__xl {
+    div,
+    input,
+    button,
+    &.dropdown {
+      border-radius: 30px;
+    }
+  }
 }
 
 .test {
