--- a/src/shared/components/main-btn/main-btn.module.scss
+++ b/src/shared/components/main-btn/main-btn.module.scss
@@ -22,6 +22,12 @@
   color: var(--primary);
 }
 
+.outlined_white {
+  background-color: transparent;
+  border-color: var(--white);
+  color: var(--white);
+}
+
 .simple {
   border-color: transparent;
   color: var(--primary);
