--- a/src/shared/components/navigation/navigation.module.scss
+++ b/src/shared/components/navigation/navigation.module.scss
@@ -63,6 +63,10 @@
         color: var(--dark);
         @extend %main-hover;
         white-space: nowrap;
+
+        svg {
+          fill: var(--dark);
+        }
       }
 
       &_arrow {
