--- a/src/shared/components/headerComponent/components/header-type-7/header-type-7.module.scss
+++ b/src/shared/components/headerComponent/components/header-type-7/header-type-7.module.scss
@@ -14,10 +14,12 @@
   }
 
   @include container-up('header', $nav-collapse-width) {
-    nav {
-      ul a {
-        color: var(--white);
-      }
+    nav a:not(nav a + ul a) {
+      color: var(--white);
+    }
+
+    nav a svg {
+      fill: var(--white);
     }
   }
 }
