--- a/src/components/hero/components/hero-type-4/hero-type-4.module.scss
+++ b/src/components/hero/components/hero-type-4/hero-type-4.module.scss
@@ -70,7 +70,7 @@
       padding: 16px 24px;
       color: var(--gray);
       font-size: var(--fs-sm);
-      border-radius: 0;
+      border-radius: 30px;
       background-color: #fff;
       border: 1px solid var(--primary);
       transition:
