--- a/src/components/hero/components/hero-type-7/hero-type-7.module.scss
+++ b/src/components/hero/components/hero-type-7/hero-type-7.module.scss
@@ -1,15 +1,23 @@
 .root {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   height: 800px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 20px;
   position: relative;
+}
 
-  &::after {
+.background {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  &::before {
     position: absolute;
     top: 0;
     left: 0;
@@ -17,8 +25,11 @@
     bottom: 0;
     content: '';
     background: rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
   }
+}
+
+.container {
+  position: relative;
 }
 
 .content {
@@ -26,11 +37,9 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 24px;
-  max-width: 1250px;
-  gap: 24px;
-  margin-inline: auto;
-  padding-inline: var(--gap-base);
 
   h1 {
     font-weight: 700;
@@ -49,24 +58,25 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  align-items: center;
   &_list {
     display: flex;
-    width: 100%;
     align-items: center;
-    gap: var(--gap-sm);
+    width: fit-content;
+    gap: 16px;
 
     button {
       border: none;
       background: none;
       padding: 0;
       margin: 0;
-      background-color: #fff;
       cursor: pointer;
       padding: 16px 24px;
-      border-radius: 8px;
       color: var(--gray);
       font-size: var(--fs-sm);
-      flex: 1;
+      border-radius: 10px;
+      background-color: #fff;
+      border: 1px solid var(--primary);
       transition:
         color 0.2s ease-in-out,
         background-color 0.2s ease-in-out;
@@ -88,10 +98,10 @@
   }
 
   &_content {
-    width: 100%;
     > div {
+      flex-wrap: wrap;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(4, 1fr);
       gap: 24px;
       color: #fff;
       gap: 16px;
@@ -100,10 +110,8 @@
 
     &_wrapper {
       display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
       gap: var(--gap-sm);
+      align-items: center;
     }
   }
 }
