--- a/src/components/news/components/news-type-3/news-type-3.module.scss
+++ b/src/components/news/components/news-type-3/news-type-3.module.scss
@@ -11,6 +11,10 @@
   align-items: center;
   margin-bottom: var(--gap-xxl);
 
+  &::before {
+    display: none;
+  }
+
   button {
     cursor: pointer;
     padding: 11px 20px;
