--- a/src/components/news/components/news-type-7/news-type-7.module.scss
+++ b/src/components/news/components/news-type-7/news-type-7.module.scss
@@ -12,6 +12,10 @@
   align-items: center;
   margin-bottom: var(--gap-lg);
 
+  &::before {
+    display: none;
+  }
+
   button {
     cursor: pointer;
     padding: var(--gap-xs) var(--gap-sm);
