--- a/src/components/hero/components/hero-type-2/hero-type-2.module.scss
+++ b/src/components/hero/components/hero-type-2/hero-type-2.module.scss
@@ -46,6 +46,7 @@
     font-size: clamp(24px, 5vw, 56px);
     color: #fff;
     margin: 0;
+    text-align: center;
   }
 
   p {
@@ -112,6 +113,7 @@
       display: flex;
       gap: var(--gap-sm);
       align-items: center;
+      width: 100%;
     }
   }
 }
@@ -140,6 +142,7 @@
     &_content {
       &_wrapper {
         flex-wrap: wrap;
+        justify-content: center;
       }
     }
   }
@@ -166,6 +169,14 @@
         grid-template-columns: repeat(2, 1fr);
       }
     }
+
+    &_list {
+      padding: 5px;
+
+      button {
+        width: 50%;
+      }
+    }
   }
 }
 
@@ -188,5 +199,15 @@
   .multi_select,
   .select {
     width: 100%;
+  }
+}
+
+@media (max-width: 350px) {
+  .tab {
+    &_list {
+      button {
+        width: 100%;
+      }
+    }
   }
 }
