--- a/src/components/result-list-column-item/components/result-list-column-item.module.scss
+++ b/src/components/result-list-column-item/components/result-list-column-item.module.scss
@@ -38,6 +38,13 @@
       min-width: 200px;
       height: 100%;
       max-height: 333px;
+
+      img {
+        aspect-ratio: 1 / 1;
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
     }
 
     &_gallery_slide {
