--- a/src/components/result-list-column/components/result-list-column.module.scss
+++ b/src/components/result-list-column/components/result-list-column.module.scss
@@ -26,8 +26,9 @@
   &_item {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 333px 1fr;
+    grid-template-rows: 370px 1fr;
     gap: var(--gap-md);
+    border: 1px solid var(--lighter);
 
     &_price {
       color: var(--primary);
@@ -37,14 +38,21 @@
       max-width: 540px;
       min-width: 200px;
       height: 100%;
-      max-height: 333px;
+      // max-height: 370px;
+
+      img {
+        aspect-ratio: 1 / 1;
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
     }
 
     &_gallery_slide {
       width: 100%;
       height: 100%;
-      max-height: 333px;
-      object-fit: cover;
+      // max-height: 370px;
+      // object-fit: cover;
     }
 
     &_content {
@@ -53,6 +61,7 @@
       gap: var(--gap-base);
       height: 100%;
       min-height: 533px;
+      padding: 16px;
 
       &_headers {
         @extend %flex-align;
