--- a/src/components/result-list/components/result-list.module.scss
+++ b/src/components/result-list/components/result-list.module.scss
@@ -29,10 +29,17 @@
     &_gallery {
       max-width: 420px;
       height: 100%;
-      max-height: 410px;
+      // max-height: 410px;
+      img {
+        aspect-ratio: 1 / 1;
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
 
       @include container-down('root', $tablet-lg-width) {
-        max-width: 1000px;
+        width: 100%;
+        max-width: calc(100vw - (var(--container-offset) * 2));
       }
     }
 
@@ -41,6 +48,7 @@
       flex-grow: 1;
       gap: var(--gap-base);
       padding: 0 16px;
+      margin-top: 20px;
 
       &_headers {
         @extend %flex-align;
