--- a/src/components/apart-detail/components/apart-detail.module.scss
+++ b/src/components/apart-detail/components/apart-detail.module.scss
@@ -13,17 +13,19 @@
     margin-bottom: 16px;
 
     &_gallery {
-      max-width: $desktop-lg-width;
-      min-width: 290px;
+      width: 100%;
       margin-top: var(--fs-xxl);
     }
 
     &_gallery_slide {
       width: 100%;
-      height: 100%;
-      min-height: 210px;
-      max-height: 500px;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
+      aspect-ratio: 3 / 1;
+
+      @include media-down($mobile-width) {
+        aspect-ratio: 4 / 3;
+      }
     }
 
     &_badge {
@@ -171,11 +173,11 @@
 
       &_image {
         width: 100%;
-        max-width: 670px;
-        height: 100%;
-        max-height: 600px;
-        object-position: left;
+        max-width: 400px;
+        height: auto;
+        object-position: left center;
         object-fit: contain;
+        aspect-ratio: 1 / 1;
       }
 
       &_badge {
