--- a/src/components/item-detail/components/item-detail.module.scss
+++ b/src/components/item-detail/components/item-detail.module.scss
@@ -13,19 +13,20 @@
     margin-bottom: 16px;
 
     &_gallery {
-      max-width: $desktop-lg-width;
-      min-width: 290px;
+      width: 100%;
+      // max-width: var(--content-width);
     }
 
     &_gallery_slide {
       width: 100%;
-      height: 100%;
-      min-height: 210px;
-      max-height: 500px;
-      aspect-ratio: 1 / 1;
-      width: 100%;
       height: auto;
       object-fit: contain;
+      object-position: center;
+      aspect-ratio: 3 / 1;
+
+      @include media-down($mobile-width) {
+        aspect-ratio: 4 / 3;
+      }
     }
 
     &_badge {
@@ -184,10 +185,10 @@
 
         img {
           width: 100%;
-          height: 100%;
-          max-width: 530px;
-          max-height: 490px;
+          height: auto;
           object-fit: contain;
+          aspect-ratio: 1 / 1;
+          max-height: 325px;
         }
 
         &_aside {
@@ -272,12 +273,15 @@
     font-weight: var(--fw-r);
     font-size: var(--fs-sm);
     color: var(--dark);
-    text-align: start;
+    text-align: center;
+    width: calc(100% / 9);
   }
 
   &_body_content td {
     padding: 16px clamp(16px, 1vw, 32px);
     border-top: 1px solid var(--lighter);
+    text-align: center;
+    width: calc(100% / 9);
   }
 
   &_body_content {
@@ -285,6 +289,7 @@
       max-width: 140px;
       height: auto;
       object-fit: contain;
+      aspect-ratio: 1/1;
     }
   }
 }
