--- a/src/components/result-list/components/result-list.module.scss
+++ b/src/components/result-list/components/result-list.module.scss
@@ -20,6 +20,7 @@
 
     @include container-down('root', $tablet-lg-width) {
       grid-template-columns: 1fr;
+      padding: 0;
     }
 
     &_price {
@@ -29,7 +30,6 @@
     &_gallery {
       max-width: 420px;
       height: 100%;
-      // max-height: 410px;
       img {
         aspect-ratio: 1 / 1;
         width: 100%;
@@ -54,20 +54,13 @@
         @extend %flex-align;
         gap: var(--gap-base);
         width: 100%;
-
-        @include container-down('root', 400px) {
-          flex-direction: column;
-        }
+        margin-bottom: 8px;
 
         span {
           font-weight: var(--fw-r);
           font-size: var(--fs-sm);
           color: var(--secondary);
           margin-left: auto;
-
-          @include container-down('root', 400px) {
-            margin-left: 0;
-          }
         }
       }
 
@@ -78,7 +71,6 @@
         width: fit-content;
         background-color: var(--lighter);
         border-radius: 5px;
-        margin-bottom: 8px;
       }
 
       &_badge_alt {
@@ -217,22 +209,14 @@
 
     &_show_more {
       width: fit-content;
-      padding: 0px 8px;
-      height: 24px;
-      background: #f3f4f6;
-      border: 1px solid #d1d5db;
+      padding: 3px 8px;
       font-weight: 400;
       font-size: 16px;
-      color: #111928;
       cursor: pointer;
+      white-space: nowrap;
+      border: 1px solid var(--primary);
+      background-color: transparent;
+      color: var(--primary);
     }
   }
 }
-
-// .swiper-slide.slider-result-list_slide img {
-//   width: 100%;
-//   height: 100%;
-//   max-height: 420px;
-//   max-height: 410px;
-//   object-fit: cover;
-// }
