--- a/src/shared/components/metros-list-alt/metros-list-alt.module.scss
+++ b/src/shared/components/metros-list-alt/metros-list-alt.module.scss
@@ -52,6 +52,10 @@
 
           &_margin_r {
             margin-right: auto;
+            -webkit-line-clamp: 2;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
           }
 
           &_time {
@@ -66,15 +70,14 @@
     }
     &_show_more {
       width: fit-content;
-      padding: 0px 8px;
-      height: 24px;
-      background: #f3f4f6;
-      border: 1px solid #d1d5db;
+      padding: 3px 8px;
       font-weight: 400;
       font-size: 16px;
-      color: #111928;
       cursor: pointer;
       white-space: nowrap;
+      border: 1px solid var(--primary);
+      background-color: transparent;
+      color: var(--primary);
     }
   }
 }
