--- a/src/shared/components/slider/slider-result-list/slider-result-list.module.scss
+++ b/src/shared/components/slider/slider-result-list/slider-result-list.module.scss
@@ -19,7 +19,8 @@
 
 .slider_result_list_button {
   position: absolute;
-  top: calc(50% - 20px);
+  top: 50%;
+  transform: translateY(-50%);
   width: 48px;
   height: 48px;
   display: flex;
@@ -37,7 +38,7 @@
 
   &_next {
     right: 10px;
-    transform: rotate(180deg);
+    transform: translateY(-50%) rotate(180deg);
   }
 
   &_prev {
