--- a/src/components/advantages/components/advantages-type-1/advantages-type-1.module.scss
+++ b/src/components/advantages/components/advantages-type-1/advantages-type-1.module.scss
@@ -2,7 +2,7 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .list {
-  @include container-down('root', $tablet-width) {
+  @include media-down($tablet-width) {
     grid-template-columns: 1fr;
   }
 
