--- a/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
+++ b/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
@@ -8,7 +8,7 @@
 
     gap: clamp(var(--gap-md), 4vw, var(--gap-xxl));
 
-    @include container-down('root', $laptop-width) {
+    @include media-down($laptop-width) {
       grid-template-columns: 1fr;
     }
 
