--- a/src/components/result-list-column/components/result-list-column.module.scss
+++ b/src/components/result-list-column/components/result-list-column.module.scss
@@ -54,6 +54,7 @@
       height: 100%;
       min-height: 533px;
       padding: 16px;
+      max-height: 100vh;
 
       &_headers {
         @extend %flex-align;
