--- a/src/components/about/components/about-type-1/about-type-1.module.scss
+++ b/src/components/about/components/about-type-1/about-type-1.module.scss
@@ -13,6 +13,18 @@
         margin-bottom: clamp(var(--gap-sm), 4vw, var(--gap-xl));
       }
     }
+
+    &:first-child {
+      @include container-down('root', $tablet-width) {
+        order: 2;
+      }
+    }
+
+    &:last-child {
+      @include container-down('root', $tablet-width) {
+        order: 1;
+      }
+    }
   }
 }
 
