--- a/src/components/apart-detail/components/apart-detail.module.scss
+++ b/src/components/apart-detail/components/apart-detail.module.scss
@@ -316,3 +316,22 @@
     color: var(--dark);
   }
 }
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.breadcrumb span {
+  font-weight: 400;
+  font-size: 16px;
+  color: #9ca3af;
+}
+
+.breadcrumb span:last-child {
+  font-weight: 400;
+  font-size: 16px;
+  color: #5145cd;
+}
