--- a/src/components/apart-detail/components/apart-detail.module.scss
+++ b/src/components/apart-detail/components/apart-detail.module.scss
@@ -327,11 +327,11 @@
 .breadcrumb span {
   font-weight: 400;
   font-size: 16px;
-  color: #9ca3af;
+  color: var(--gray);
 }
 
 .breadcrumb span:last-child {
   font-weight: 400;
   font-size: 16px;
-  color: #5145cd;
+  color: var(--primary);
 }
