--- a/src/components/view-result-list-item/components/view-result-list-item.module.scss
+++ b/src/components/view-result-list-item/components/view-result-list-item.module.scss
@@ -8,3 +8,22 @@
   display: flex;
   justify-content: center;
 }
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.breadcrumb span {
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--gray);
+}
+
+.breadcrumb span:last-child {
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--primary);
+}
