--- a/src/shared/components/headerComponent/components/header-type-5/header-type-5.module.scss
+++ b/src/shared/components/headerComponent/components/header-type-5/header-type-5.module.scss
@@ -3,8 +3,14 @@
 
 .root {
   background-color: var(--white);
+  transition: transform 0.3s ease-in-out;
+}
+
+.sticky {
   position: sticky;
   top: 0;
+  transform: translateY(0px);
+  transition: transform 0.3s ease-in-out;
 }
 
 .header {
