--- a/src/components/advantages/components/advantages-type-7/advantages-type-7.module.scss
+++ b/src/components/advantages/components/advantages-type-7/advantages-type-7.module.scss
@@ -27,6 +27,7 @@
       height: 100%;
 
       .base_subtitle {
+        // font-size: clamp(24px, 3vw, 32px);
         color: var(--primary);
       }
     }
