--- a/src/components/blog-detail/components/blog-detail-type-4/blog-detail-type-4.module.scss
+++ b/src/components/blog-detail/components/blog-detail-type-4/blog-detail-type-4.module.scss
@@ -21,11 +21,11 @@
         display: block;
         width: 100%;
         height: auto;
+        max-height: 300px;
         object-fit: contain;
         border-radius: 30px;
       }
     }
-
 
     &_timestamp {
       font-size: 14px;
