--- a/src/components/blog-detail/components/blog-detail-type-2/blog-detail-type-2.module.scss
+++ b/src/components/blog-detail/components/blog-detail-type-2/blog-detail-type-2.module.scss
@@ -10,7 +10,9 @@
     img {
       width: 100%;
       height: auto;
-      object-fit: contain;
+      max-height: 525px;
+      object-fit: cover;
+      object-position: center;
     }
 
     small {
