--- a/src/components/blog-detail/components/blog-detail-type-3/blog-detail-type-3.module.scss
+++ b/src/components/blog-detail/components/blog-detail-type-3/blog-detail-type-3.module.scss
@@ -9,7 +9,9 @@
     img {
       width: 100%;
       height: auto;
-      object-fit: contain;
+      max-height: 525px;
+      object-fit: cover;
+      object-position: center;
     }
   }
 }
