--- a/src/components/news/components/news-type-8/news-type-8.module.scss
+++ b/src/components/news/components/news-type-8/news-type-8.module.scss
@@ -3,13 +3,14 @@
 
 .root {
   @extend %flex-column;
+  align-items: center;
   gap: clamp(var(--gap-xl), 3vw, var(--gap-xxl));
 }
 
 .tabs {
   @extend %flex-wrap;
   align-items: center;
-  margin-bottom: var(--gap-xxl);
+  margin-bottom: var(--gap-lg);
 
   &::before {
     display: none;
@@ -17,10 +18,10 @@
 
   button {
     cursor: pointer;
-    padding: 11px 20px;
+    padding: var(--gap-xs) var(--gap-sm);
     background-color: transparent;
+    border: 1px solid transparent;
     font-size: var(--fs-sm);
-    border: none;
     transition:
       background-color var(--slow-transition),
       color var(--slow-transition);
@@ -34,64 +35,60 @@
     &[aria-selected='true'] {
       color: var(--primary);
       cursor: default;
-      background-color: var(--primary);
-      color: var(--white);
-      border-radius: 30px;
+      border: 1px solid var(--primary);
     }
   }
 }
 
 .list {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(2, 1fr);
 
   @include container-down('root', $tablet-width) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
   }
 
-  @include container-down('root', $mobile-width) {
-    display: flex;
-    flex-direction: column;
-  }
+  // @include container-down('root', $mobile-width) {
+  //   grid-template-columns: 1fr;
+  // }
 
   &_item {
+    @extend %flex-column;
     container: list-item / inline-size;
-
-    &:nth-child(even) {
-      .list_item_content {
-        img {
-          order: 2;
-
-          @include container-down('root', $tablet-width) {
-            order: initial;
-          }
-        }
-      }
-    }
   }
 
   &_item_content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: clamp(var(--gap-sm), 3vw, var(--gap-xxl));
-    align-items: center;
-    color: var(--site-color);
+    grid-template-columns: 3fr 5fr;
+    gap: 20px;
 
-    @include container-down('list-item', $tablet-width) {
-      display: flex;
-      flex-direction: column;
+    @include container-down('list-item', 440px) {
+      grid-template-columns: 1fr;
     }
 
     & > img {
-      width: 100%;
-      height: auto;
-      aspect-ratio: 3/2;
+      aspect-ratio: 1/1;
       object-fit: cover;
-      border-radius: 10px;
-      max-height: 300px;
+
+      @include container-down('list-item', 440px) {
+        aspect-ratio: 3/2;
+        max-width: 100%;
+        max-height: 200px;
+      }
+    }
+
+    &_header {
+      @extend %flex-wrap;
+      align-items: center;
+      gap: var(--gap-xs);
+      margin: var(--gap-xxs) 0;
     }
 
     &_wrapper {
+      flex-grow: 1;
+      color: var(--site-color);
+      margin-top: calc(-1 * var(--gap-xxs));
+
       .base_subtitle {
         min-height: calc(
           clamp(var(--fs-md), 2.2vw, var(--fs-lg)) * var(--line-height) * 2
@@ -104,7 +101,7 @@
         }
       }
       .base_text {
-        @include text-truncate(5);
+        @include text-truncate(3);
       }
     }
   }
