--- a/src/shared/components/content-block/content-block.module.scss
+++ b/src/shared/components/content-block/content-block.module.scss
@@ -5,8 +5,10 @@
   gap: var(--gap-lg);
 
   img {
-    width: auto;
+    width: 100%;
     height: auto;
     object-fit: contain;
+    object-position: left;
+    max-height: 440px;
   }
 }
